Quote writer position adjusted.

--- a/index.html
+++ b/index.html
@@ -70,18 +70,20 @@
       </div>
     </div>
     <div class="bottom">
-      <div class="quote">
-        <q
-          ><i>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
-            <br />
-            delectus aspernatur animi ut quae enim ad voluptas tenetur eum<br />
-            consequuntur reiciendis facere quia excepturi ratione, cumque,<br />
-            consectetur, nam repellendus molestiae.</i
-          ></q
-        >
+      <div class="bot-container">
+        <div class="quote">
+          <q
+            ><i>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero
+              <br />
+              delectus aspernatur animi ut quae enim ad voluptas tenetur eum<br />
+              consequuntur reiciendis facere quia excepturi ratione, cumque,<br />
+              consectetur, nam repellendus molestiae.</i
+            ></q
+          >
+        </div>
+        <div class="writer"><b>-Someone Unknown</b></div>
       </div>
-      <div class="writer"><b>-Someone Unknown</b></div>
     </div>
     <div class="footer">
       <div class="box">
